@@ -40,6 +40,7 @@ dependencies {
 
 tasks.withType<Test>().configureEach {
   // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
   jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
   jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
